--- a/db/families.yaml
+++ b/db/families.yaml
@@ -27,6 +27,25 @@ families:
       generation: 4
     - person: lapo-elkann
       generation: 4
+  al-nahyan:
+    origin: Abu Dhabi, UAE
+    founder: sheikh-zayed-bin-sultan
+    sector: royalty, finance, energy
+    generations: 3
+    status: active
+    members:
+    - person: sheikh-tahnoun-bin-zayed
+      generation: 2
+      role: member
+    - person: mohammed-bin-zayed
+      generation: 2
+      role: leader
+    - person: mansour-bin-zayed
+      generation: 2
+      role: member
+    - person: abdullah-bin-zayed
+      generation: 2
+      role: member
   azcarraga:
     origin: Mexico
     sector: media
