--- a/db/persons.yaml
+++ b/db/persons.yaml
@@ -2644,8 +2644,8 @@ persons:
     affiliations:
     - org: mubadala
       role: executive
-      from: 2018
-      note: Group CEO
+      from: 2002
+      note: Managing Director & Group CEO
     - org: mgx
       role: chairman
       from: 2024
@@ -4769,14 +4769,6 @@ persons:
     died: 1930
     nationality: USA
     family: dupont
-  tahnoon-bin-zayed:
-    nationality: UAE
-    note: National Security Advisor UAE, Al Nahyan family
-    affiliations:
-    - org: g42
-      role: chairman
-      from: 2018
-      note: Chairman and controlling shareholder
   tedros-adhanom:
     born: 1965
     nationality: ETH
