refactor pharma folder

--- a/db/organizations.yaml
+++ b/db/organizations.yaml
@@ -458,7 +458,7 @@ organizations:
       note: Speaker
   astrazeneca:
     name: AstraZeneca
-    type: company
+    type: pharma
     founded: 1999
     headquarters: Cambridge, UK
     status: active
@@ -1024,7 +1024,7 @@ organizations:
       role: partner
   biontech:
     name: BioNTech SE
-    type: company
+    type: pharma
     founded: 2008
     headquarters: Mainz, Germany
     status: active
@@ -4051,7 +4051,7 @@ organizations:
       role: partner
   gsk:
     name: GSK plc
-    type: company
+    type: pharma
     founded: 2000
     headquarters: London, UK
     status: active
@@ -4444,7 +4444,7 @@ organizations:
       from: 1981
   johnson-johnson:
     name: Johnson & Johnson
-    type: company
+    type: pharma
     founded: 1886
     headquarters: New Brunswick, New Jersey, USA
     status: active
@@ -4988,7 +4988,7 @@ organizations:
       note: Shareholder since 1974, reduced from 14%
   merck:
     name: Merck & Co.
-    type: company
+    type: pharma
     founded: 1891
     headquarters: Rahway, NJ, USA
     status: active
@@ -5189,7 +5189,7 @@ organizations:
       note: ViacomCBS owns 49%
   moderna:
     name: Moderna Inc.
-    type: company
+    type: pharma
     founded: 2010
     headquarters: Cambridge, Massachusetts, USA
     status: active
@@ -5527,7 +5527,7 @@ organizations:
       note: CEO/Chairman
   novartis:
     name: Novartis AG
-    type: company
+    type: pharma
     founded: 1996
     headquarters: Basel, Switzerland
     status: active
@@ -5960,7 +5960,7 @@ organizations:
       from: 2020
   pfizer:
     name: Pfizer Inc.
-    type: company
+    type: pharma
     founded: 1849
     headquarters: New York, USA
     status: active
@@ -6315,7 +6315,7 @@ organizations:
     status: active
   roche:
     name: F. Hoffmann-La Roche AG
-    type: company
+    type: pharma
     founded: 1896
     headquarters: Basel, Switzerland
     status: active
